Delay all 3rd-party plugins

--- a/packages/delay-sample/index.html
+++ b/packages/delay-sample/index.html
@@ -189,7 +189,7 @@
     }(window);</script>
     <script defer>window.ShopifyPay = window.ShopifyPay || {};
     window.ShopifyPay.apiHost = "shop.app\/pay";</script>
-    <script defer>
+    <script is="delay-script" phase="interactive">
         window.Shopify = window.Shopify || {};
         if (!window.Shopify.featureAssets) window.Shopify.featureAssets = {};
         window.Shopify.featureAssets['shop-js'] = {
@@ -348,7 +348,7 @@
     <link rel="alternate" hreflang="x-default" href="https:/">
     <link rel="alternate" hreflang="en-CA" href="https:/">
     <link rel="alternate" hreflang="fr-CA" href="https:/fr">
-    <script defer>
+    <script is="delay-script" phase="interactive">
         (function () {
             var scripts = ["https://cdn.shopify.com/shopifycloud/checkout-web/assets/runtime.latest.en.b61b3f9dfdcc0a077f11.js", "https://cdn.shopify.com/shopifycloud/checkout-web/assets/809.latest.en.22b066f200008aec130a.js", "https://cdn.shopify.com/shopifycloud/checkout-web/assets/Information.latest.en.54dfe5d34985e1982b50.js", "https://cdn.shopify.com/shopifycloud/checkout-web/assets/23.latest.en.a7ee3a2bd3fc2ad170b2.js", "https://cdn.shopify.com/shopifycloud/checkout-web/assets/733.latest.en.22cb4eafe0499ff4281e.js", "https://cdn.shopify.com/shopifycloud/checkout-web/assets/39.latest.en.99827a586f76e932dc2d.js", "https://cdn.shopify.com/shopifycloud/checkout-web/assets/app.latest.en.f936660d1941d75ef257.js"];
             var styles = ["https://cdn.shopify.com/shopifycloud/checkout-web/assets/23.latest.en.3cbccf84d73cde1fb510.css", "https://cdn.shopify.com/shopifycloud/checkout-web/assets/app.latest.en.9d6b9f970cd086c012b2.css", "https://cdn.shopify.com/shopifycloud/checkout-web/assets/739.latest.en.3ad1658c0d5df64841ff.css"];
@@ -534,14 +534,14 @@
         })
     }(document);</script>
     <script integrity="sha256-h4dvokWvGcvRSqiG7VnGqoonxF0k3NeoHPLSMjUGIz4="
-            data-source-attribution="shopify.loadfeatures" defer
-            src="/cdn/shopifycloud/shopify/assets/storefront/load_feature-87876fa245af19cbd14aa886ed59c6aa8a27c45d24dcd7a81cf2d2323506233e.js"
+            data-source-attribution="shopify.loadfeatures" is="delay-script" phase="interactive"
+            url="/cdn/shopifycloud/shopify/assets/storefront/load_feature-87876fa245af19cbd14aa886ed59c6aa8a27c45d24dcd7a81cf2d2323506233e.js"
             crossorigin="anonymous"></script>
-    <script crossorigin="anonymous" defer
-            src="/cdn/shopifycloud/shopify/assets/shopify_pay/storefront-a2d444786d996da5634fbbaeeffe6104ee672440dfa6cdcaebfb27dceaaf9c0f.js?v=20220906"></script>
+    <script crossorigin="anonymous" is="delay-script" phase="interactive"
+            url="/cdn/shopifycloud/shopify/assets/shopify_pay/storefront-a2d444786d996da5634fbbaeeffe6104ee672440dfa6cdcaebfb27dceaaf9c0f.js?v=20220906"></script>
     <script integrity="sha256-HAs5a9TQVLlKuuHrahvWuke+s1UlxXohfHeoYv8G2D8="
-            data-source-attribution="shopify.dynamic-checkout" defer
-            src="/cdn/shopifycloud/shopify/assets/storefront/features-1c0b396bd4d054b94abae1eb6a1bd6ba47beb35525c57a217c77a862ff06d83f.js"
+            data-source-attribution="shopify.dynamic-checkout" is="delay-script" phase="interactive"
+            url="/cdn/shopifycloud/shopify/assets/storefront/features-1c0b396bd4d054b94abae1eb6a1bd6ba47beb35525c57a217c77a862ff06d83f.js"
             crossorigin="anonymous"></script>
 
 
