--- a/packages/delay-sample/index.html
+++ b/packages/delay-sample/index.html
@@ -572,9 +572,6 @@
 
     <!-- BEGIN app block: shopify://apps/klaviyo-email-marketing-sms/blocks/klaviyo-onsite-embed/2632fe16-c075-4321-a88b-50b567f42507 -->
 
-
-    <script is="delay-script" phase="interactive"
-            url="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=TGESpr"></script>
     <script defer>!function () {
         if (!window.klaviyo) {
             window._klOnsite = window._klOnsite || [];
@@ -604,7 +601,6 @@
             }
         }
     }();</script>
-
 
     <!-- END app app block -->
     <!-- BEGIN app block: shopify://apps/vitals-all-in-one-marketing/blocks/app-embed/aeb48102-2a5a-4f39-bdbd-d8d49f4e20b8 -->
@@ -6691,6 +6687,6 @@
     </div>
 </cookie-consent-bar>
 
-
+<script src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=RZNSbn" defer></script>
 </body>
 </html>
