--- a/packages/original-problem/index.html
+++ b/packages/original-problem/index.html
@@ -16,7 +16,6 @@
         f.parentNode.insertBefore(j, f)
     })(window, document, 'script', 'dataLayer', 'GTM-5RJR9WC')</script>
 
-
     <!-- Basic page needs ================================================== -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -67,7 +66,7 @@
             integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-migrate-1.4.1.min.js"></script>
     <script src="http://benalman.com/code/projects/jquery-throttle-debounce/jquery.ba-throttle-debounce.js"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/beefup@1.1.7/dist/js/jquery.beefup.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/beefup@1.1.7/dist/js/jquery.beefup.min.js"></script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
@@ -85,7 +84,7 @@
     <link rel="preload"
           href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.1/dist/css/themes/splide-default.min.css" as="style"
           onload="this.onload=null;this.rel='stylesheet'">
-    <script defer src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.1/dist/js/splide.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.1/dist/js/splide.min.js"></script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
@@ -108,7 +107,7 @@
     <script src="/cdn/shop/t/331/assets/tailwind.config.js?v=18225310393226528611687250958"
             type="text/javascript"></script>
 
-    <script async defer src="https://tools.luckyorange.com/core/lo.js?site-id=9ca7f04f"></script>
+    <script src="https://tools.luckyorange.com/core/lo.js?site-id=9ca7f04f"></script>
     <script src="/cdn/shop/t/331/assets/lazysizes.min.js?v=155223123402716617051687250918"
             async="async"></script>
     <script src="/cdn/shop/t/331/assets/modernizr.min.js?v=21391054748206432451687250926"
@@ -139,7 +138,7 @@
     <link rel="stylesheet" href="">
 
     <script src="/cdn/shop/t/331/assets/global.js?v=85203908627032338781687250895"
-            defer="defer"></script>
+            =""></script>
     <script src="/cdn/shop/t/331/assets/helpers.js?v=183706556591215914931687250901"
             type="text/javascript"></script>
 
@@ -864,16 +863,16 @@
         previewBarInjector.init();
     });</script>
     <script integrity="sha256-h4dvokWvGcvRSqiG7VnGqoonxF0k3NeoHPLSMjUGIz4="
-            data-source-attribution="shopify.loadfeatures" defer="defer"
+            data-source-attribution="shopify.loadfeatures" =""
             src="/cdn/shopifycloud/shopify/assets/storefront/load_feature-87876fa245af19cbd14aa886ed59c6aa8a27c45d24dcd7a81cf2d2323506233e.js"
             crossorigin="anonymous"></script>
-    <script crossorigin="anonymous" defer="defer"
+    <script crossorigin="anonymous" =""
             src="/cdn/shopifycloud/shopify/assets/shopify_pay/storefront-a2d444786d996da5634fbbaeeffe6104ee672440dfa6cdcaebfb27dceaaf9c0f.js?v=20220906"></script>
     <script integrity="sha256-HAs5a9TQVLlKuuHrahvWuke+s1UlxXohfHeoYv8G2D8="
-            data-source-attribution="shopify.dynamic-checkout" defer="defer"
+            data-source-attribution="shopify.dynamic-checkout" =""
             src="/cdn/shopifycloud/shopify/assets/storefront/features-1c0b396bd4d054b94abae1eb6a1bd6ba47beb35525c57a217c77a862ff06d83f.js"
             crossorigin="anonymous"></script>
-    <script integrity="sha256-o0rXHoHYF8JV/pI5sd/RPjI3ywH41Ezq5yxQ3ds5iuM=" defer="defer"
+    <script integrity="sha256-o0rXHoHYF8JV/pI5sd/RPjI3ywH41Ezq5yxQ3ds5iuM=" =""
             src="/cdn/shopifycloud/shopify/assets/storefront/bars/preview_bar_injector-a34ad71e81d817c255fe9239b1dfd13e3237cb01f8d44ceae72c50dddb398ae3.js"
             crossorigin="anonymous"></script>
 
@@ -894,7 +893,7 @@
     <!-- BEGIN app block: shopify://apps/klaviyo-email-marketing-sms/blocks/klaviyo-onsite-embed/2632fe16-c075-4321-a88b-50b567f42507 -->
 
 
-    <script async src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=RZNSbn"></script>
+    <script src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=RZNSbn"></script>
     <script>!function () {
         if (!window.klaviyo) {
             window._klOnsite = window._klOnsite || [];
@@ -1474,7 +1473,7 @@
                         <span id="announcement-message" class="weglot-dynamic-content-translate">Father's day Sale ending in:&nbsp;</span>
                         <span id="countdown-timer" class="font-bold"></span>
 
-                        <script defer>
+                        <script >
                             $(document).ready(function () {
                                 const timer = document.getElementById('countdown-timer');
                                 const message = document.getElementById('announcement-message');
@@ -1533,7 +1532,7 @@
     </div>
 
 
-    <script defer>
+    <script >
         $(document).ready(function () {
             new Splide('#shopify-section-announcement-bar .splide', {
                 pagination: false,
@@ -2340,7 +2339,7 @@
         </script>
     </navigation-bar>
 
-    <script type="module" defer>
+    <script type="module" >
         class NavigationBar extends HTMLElement {
             constructor() {
                 super();
@@ -2499,7 +2498,7 @@
                 </div>
             </section>
 
-            <script defer type="module">
+            <script  type="module">
                 $(document).ready(function () {
                     new Splide('#home-risk-free-banner-section .splide', {
                         gap: '16px',
@@ -6032,13 +6031,13 @@
       rel="stylesheet" type="text/css" media="all"/>
 
 <script src="/cdn/shop/t/331/assets/cart.js?v=89650627743014228481687250859"
-        defer="defer"></script>
+        =""></script>
 <script src="/cdn/shop/t/331/assets/cart-drawer.js?v=144714812610118039071687250856"
-        defer="defer"></script>
+        =""></script>
 <script src="/cdn/shop/t/331/assets/cart-item.js?v=163418899277133908741687250857"
-        defer="defer"></script>
+        =""></script>
 <script src="/cdn/shop/t/331/assets/cart-upsell.js?v=179965737164722341261687250858"
-        defer="defer"></script>
+        =""></script>
 
 <cart-drawer id="CartDrawer" class="">
     <div id="CartDrawer-Overlay" class="cart-drawer__overlay"></div>
@@ -7461,9 +7460,9 @@
 
 
 <script src="/cdn/shop/t/331/assets/globo.preorder.data.js?v=159920449085083603051687251022"
-        type="text/javascript" defer></script>
+        type="text/javascript" ></script>
 <script src="/cdn/shop/t/331/assets/globo.preorder.js?v=127379112713105356841687250897"
-        type="text/javascript" defer></script>
+        type="text/javascript" ></script>
 <script type="text/javascript">
     var globoPreorderShowMultipleCurrencies = false;
     var globoPreorderCartType = "drawer";
