--- a/packages/delay-sample/index.html
+++ b/packages/delay-sample/index.html
@@ -5204,26 +5204,25 @@
     </li>
 </ul>
 
-<script defer src="/cdn/shop/t/11/assets/jquery.ba-throttle-debounce.js?v=103250179697527314711688024714"></script>
-<script defer src="/cdn/shop/t/11/assets/jquery.beefup.min.js?v=82952605651928686161688024714"></script>
-<script defer src="/cdn/shop/t/11/assets/jquery.modal.min.js?v=15875380166552750701688024716"></script>
-<script defer src="/cdn/shop/t/11/assets/jquery.fancybox.min.js?v=102984942719613846721688024715"></script>
-<script defer src="/cdn/shop/t/11/assets/select2.min.js?v=49960443923896795481688024721"></script>
-<script defer src="/cdn/shop/t/11/assets/toastr.min.js?v=32063384496253430001688024728"></script>
-<script defer src="/cdn/shop/t/11/assets/swiper-bundle.min.js?v=30986975797822707101688024726"></script>
-<script defer src="/cdn/shop/t/11/assets/popper.min.js?v=106254159189482773611688024720"></script>
+<script is="delay-script" url="/cdn/shop/t/11/assets/jquery.ba-throttle-debounce.js?v=103250179697527314711688024714"></script>
+<script is="delay-script" url="/cdn/shop/t/11/assets/jquery.beefup.min.js?v=82952605651928686161688024714"></script>
+<script is="delay-script" url="/cdn/shop/t/11/assets/jquery.modal.min.js?v=15875380166552750701688024716"></script>
+<script is="delay-script" url="/cdn/shop/t/11/assets/jquery.fancybox.min.js?v=102984942719613846721688024715"></script>
+<script is="delay-script" url="/cdn/shop/t/11/assets/select2.min.js?v=49960443923896795481688024721"></script>
+<script is="delay-script" url="/cdn/shop/t/11/assets/toastr.min.js?v=32063384496253430001688024728"></script>
+<script is="delay-script" url="/cdn/shop/t/11/assets/swiper-bundle.min.js?v=30986975797822707101688024726"></script>
+<script is="delay-script" url="/cdn/shop/t/11/assets/popper.min.js?v=106254159189482773611688024720"></script>
 
-<script defer src="/cdn/shop/t/11/assets/tippy-bundle.umd.min.js?v=106717848408361717631688024727"></script>
+<script is="delay-script" url="/cdn/shop/t/11/assets/tippy-bundle.umd.min.js?v=106717848408361717631688024727"></script>
 
-<link rel="stylesheet" href="/cdn/shop/t/11/assets/jquery.modal.min.css?v=64857397979575196151688024716">
-<link rel="stylesheet" href="/cdn/shop/t/11/assets/jquery.fancybox.css?v=159808164371632363711688024715">
-<link rel="stylesheet" href="/cdn/shop/t/11/assets/splide.min.css?v=96280272462562602901688024724">
-<link rel="stylesheet" href="/cdn/shop/t/11/assets/splide-core.min.css?v=23284300864073171001688024723">
-<link rel="stylesheet" href="/cdn/shop/t/11/assets/toastr.min.css?v=68908210151308294901688024727">
-<link rel="stylesheet" href="/cdn/shop/t/11/assets/swiper-bundle.min.css?v=183092761113033764571688024725">
-<link rel="stylesheet" href="/cdn/shop/t/11/assets/mediabox.min.css?v=178153156364416133851688024719">
+<link is="delay-stylesheet" href="/cdn/shop/t/11/assets/jquery.modal.min.css?v=64857397979575196151688024716">
+<link is="delay-stylesheet" href="/cdn/shop/t/11/assets/jquery.fancybox.css?v=159808164371632363711688024715">
+<link is="delay-stylesheet" href="/cdn/shop/t/11/assets/splide.min.css?v=96280272462562602901688024724">
+<link is="delay-stylesheet" href="/cdn/shop/t/11/assets/splide-core.min.css?v=23284300864073171001688024723">
+<link is="delay-stylesheet" href="/cdn/shop/t/11/assets/toastr.min.css?v=68908210151308294901688024727">
+<link is="delay-stylesheet" href="/cdn/shop/t/11/assets/swiper-bundle.min.css?v=183092761113033764571688024725">
+<link is="delay-stylesheet" href="/cdn/shop/t/11/assets/mediabox.min.css?v=178153156364416133851688024719">
 
-<script is="delay-script" phase="interactive" url="https://www.googleoptimize.com/optimize.js?id=OPT-KNFWBCL"></script>
 <script>
     (function (w, d, s, l, i) {
         w[l] = w[l] || [];
