--- a/packages/delay-sample/index.html
+++ b/packages/delay-sample/index.html
@@ -10,6 +10,7 @@
 
     <script defer src="/cdn/shop/t/11/assets/custom-elements.js?v=63441368354317747581666688395"></script>
     <script defer src="/cdn/shop/t/11/assets/loading-overlay.js?v=165644621593570602981666688387"></script>
+    <script defer src="/cdn/shop/t/11/assets/jquery.beefup.min.js?v=82952605651928686161688024714"></script>
 
     <script defer src="/cdn/shop/t/11/assets/global.js?v=31874650481387444961694160502"></script>
     <script defer src="/cdn/shop/t/11/assets/lazysizes.min.js?v=155223123402716617051647849393"></script>
@@ -43,11 +44,8 @@
     <link rel="stylesheet" href="/cdn/shop/t/11/assets/global.css?v=121642044686454688461695713945">
     <link is="delay-stylesheet" href="/cdn/shop/t/11/assets/fonts.css?v=58483565803451788371695806730">
 
-
     <link rel="stylesheet" href="/cdn/shop/t/11/assets/new-heading.css?v=9457285026445821181687357026">
-
     <link rel="stylesheet" href="/cdn/shop/t/11/assets/tailwind.css?v=148318756378458697681694159162">
-
 
     <script defer>
         const Shop = {
@@ -5204,8 +5202,8 @@
     </li>
 </ul>
 
-<script is="delay-script" url="/cdn/shop/t/11/assets/jquery.ba-throttle-debounce.js?v=103250179697527314711688024714"></script>
-<script is="delay-script" url="/cdn/shop/t/11/assets/jquery.beefup.min.js?v=82952605651928686161688024714"></script>
+<script is="delay-script"
+        url="/cdn/shop/t/11/assets/jquery.ba-throttle-debounce.js?v=103250179697527314711688024714"></script>
 <script is="delay-script" url="/cdn/shop/t/11/assets/jquery.modal.min.js?v=15875380166552750701688024716"></script>
 <script is="delay-script" url="/cdn/shop/t/11/assets/jquery.fancybox.min.js?v=102984942719613846721688024715"></script>
 <script is="delay-script" url="/cdn/shop/t/11/assets/select2.min.js?v=49960443923896795481688024721"></script>
@@ -5300,7 +5298,7 @@
 
 <!-- Start Weglot Script -->
 <script is="delay-script" url="https://cdn.weglot.com/weglot.min.js" phase="interactive"></script>
-<script id="has-script-tags" is="delay-script" phase="interactive">
+<script id="has-script-tags">
     Weglot.initialize({api_key: 'wg_e352fa8c030a877a802a404aac1074d00'});
 </script>
 <!-- End Weglot Script -->
@@ -5319,17 +5317,18 @@
         y.parentNode.insertBefore(t, y);
     })(window, document, 'clarity', 'script', 'd60mjcc2fl');
 </script>
-<script is="delay-script" phase="interactive">
+<script>
     (function (i, s, o, g, r, a, m) {
         i["abtiming"] = 1 * new Date();
         a = s.createElement(o),
             m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
+        a.is = 'delay-script';
+        a.phase = "interactive";
+        a.url = g;
         m.parentNode.insertBefore(a, m)
     })(window, document, "script", "//try.abtasty.com/b98579b87d8565047076037f703e1727.js");
 </script>
-<script is="delay-script" phase="interactive">
+<script>
     if (typeof ometria == 'undefined') window.ometria = {};
     ometria.raw_data = {
         template: "index",
@@ -5356,19 +5355,24 @@
         var url = window.location.protocol + "//cdn.ometria.com/tags/f956f8fdda3fb069.js?v=2023091207dsfds";
         setTimeout(function () {
             var sc = document.createElement('script');
-            sc.src = url;
+            sc.is = "delay-script"
+            sc.phase = "interactive"
+            sc.url = url;
             sc.setAttribute('async', 'true');
             document.getElementsByTagName("head")[0].appendChild(sc);
         }, 15);
     })();
 </script>
 
-<link rel="stylesheet" href="/cdn/shop/t/11/assets/new-splide.css?v=100926187677075264311687357027">
+<link is="delay-stylesheet" href="/cdn/shop/t/11/assets/new-splide.css?v=100926187677075264311687357027">
 
-<script defer src="/cdn/shop/t/11/assets/variant-selects.js?v=142778093263602674021694159162"></script>
+<script is="delay-script" phase="interactive"
+        url="/cdn/shop/t/11/assets/variant-selects.js?v=142778093263602674021694159162"></script>
 
-<script defer src="/cdn/shop/t/11/assets/quantity-adjuster.js?v=63438535502664631441678797214"></script>
-<script defer src="/cdn/shop/t/11/assets/variant-selector.js?v=148380756409455986861666688389"></script>
+<script is="delay-script" phase="interactive"
+        url="/cdn/shop/t/11/assets/quantity-adjuster.js?v=63438535502664631441678797214"></script>
+<script is="delay-script" phase="interactive"
+        url="/cdn/shop/t/11/assets/variant-selector.js?v=148380756409455986861666688389"></script>
 
 <script>
     window.routes = {
@@ -5390,13 +5394,17 @@
     }
 </style>
 
-<link rel="stylesheet" href="/cdn/shop/t/11/assets/cart-drawer.css?v=111562508632001881001694591557">
-<link rel="stylesheet" href="/cdn/shop/t/11/assets/component-cart.css?v=61086454150987525971666688394">
+<link is="delay-stylesheet" href="/cdn/shop/t/11/assets/cart-drawer.css?v=111562508632001881001694591557">
+<link is="delay-stylesheet" href="/cdn/shop/t/11/assets/component-cart.css?v=61086454150987525971666688394">
 
-<script defer src="/cdn/shop/t/11/assets/cart.js?v=102393167721669557241694159418"></script>
-<script defer src="/cdn/shop/t/11/assets/cart-drawer.js?v=144714812610118039071678877879"></script>
-<script defer src="/cdn/shop/t/11/assets/cart-item.js?v=18674064785282689951694591558"></script>
-<script defer src="/cdn/shop/t/11/assets/cart-upsell.js?v=179965737164722341261684224838"></script>
+<script is="delay-script" phase="interactive"
+        url="/cdn/shop/t/11/assets/cart.js?v=102393167721669557241694159418"></script>
+<script is="delay-script" phase="interactive"
+        url="/cdn/shop/t/11/assets/cart-drawer.js?v=144714812610118039071678877879"></script>
+<script is="delay-script" phase="interactive"
+        url="/cdn/shop/t/11/assets/cart-item.js?v=18674064785282689951694591558"></script>
+<script is="delay-script" phase="interactive"
+        url="/cdn/shop/t/11/assets/cart-upsell.js?v=179965737164722341261684224838"></script>
 
 <cart-drawer id="CartDrawer" class="">
     <div id="CartDrawer-Overlay" class="cart-drawer__overlay"></div>
@@ -6183,7 +6191,7 @@
     </div>
 
 </div>
-<link href="/cdn/shop/t/11/assets/store-localization.css?v=63831442359007797311687251079" rel="stylesheet"
+<link href="/cdn/shop/t/11/assets/store-localization.css?v=63831442359007797311687251079" is="delay-stylesheet"
       type="text/css" media="all">
 
 <div id="store-localization-popup">
@@ -6249,10 +6257,10 @@
     </div>
 </cookie-consent-bar>
 
-<script is="delay-script" phase="interactive" url="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=RZNSbn"></script>
+<script is="delay-script" phase="interactive"
+        url="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=RZNSbn"></script>
 
-<script is="delay-script" phase="interactive" url="https://wchat.eu.freshchat.com/js/widget.js?t=1696081325371"></script>
-
-
+<script is="delay-script" phase="interactive"
+        url="https://wchat.eu.freshchat.com/js/widget.js?t=1696081325371"></script>
 </body>
 </html>
