--- a/packages/delay-sample/index.html
+++ b/packages/delay-sample/index.html
@@ -42,7 +42,7 @@
     <link is="delay-stylesheet" href="/cdn/shop/t/11/assets/select2.min.css?v=3199361556163848531688024720">
     <link rel="stylesheet" href="/cdn/shop/t/11/assets/vendors.css?v=106288142737246749421690864998">
     <link rel="stylesheet" href="/cdn/shop/t/11/assets/global.css?v=121642044686454688461695713945">
-    <link is="delay-stylesheet" href="/cdn/shop/t/11/assets/fonts.css?v=58483565803451788371695806730">
+    <link rel="stylesheet" href="/cdn/shop/t/11/assets/fonts.css?v=58483565803451788371695806730">
 
     <link rel="stylesheet" href="/cdn/shop/t/11/assets/new-heading.css?v=9457285026445821181687357026">
     <link rel="stylesheet" href="/cdn/shop/t/11/assets/tailwind.css?v=148318756378458697681694159162">
@@ -57,7 +57,8 @@
         };
     </script>
 
-    <script is="delay-script" phase="interactive" url="/cdn/shop/t/11/assets/shopify-plugins.js?v=58483565803451788371695806730"></script>
+    <script is="delay-script" phase="interactive"
+            url="/cdn/shop/t/11/assets/shopify-plugins.js?v=58483565803451788371695806730"></script>
 
 
     <script defer>window.performance && window.performance.mark && window.performance.mark('shopify.content_for_header.start');</script>
@@ -588,7 +589,6 @@
 </head>
 <body>
 
-<script is="delay-script" url="/cdn/shop/t/11/assets/main-navigation.js?v=31874650481387444961694160502"></script>
 
 
 <div class="sticky top-0 z-[101]">
@@ -645,6 +645,7 @@
          class="shopify-section shopify-section-group-header-group site-header-wrapper">
         <link rel="stylesheet" href="/cdn/shop/t/11/assets/header.css?v=47871740537913818411690273878">
         <link rel="stylesheet" href="/cdn/shop/t/11/assets/cart-icon-bubble.css?v=49827955139299862791696073989">
+        <script is="delay-script" url="/cdn/shop/t/11/assets/main-navigation.js?v=31874650481387444961694160502"></script>
 
         <navigation-bar id="header">
 
