--- a/packages/delay-sample/index.html
+++ b/packages/delay-sample/index.html
@@ -16,7 +16,7 @@
     <script defer src="/cdn/shop/t/11/assets/lazysizes.min.js?v=155223123402716617051647849393"></script>
     <script defer src="/cdn/shop/t/11/assets/layout-scripts.js?v=81574266922274938051691121534"></script>
     <script defer src="/cdn/shop/t/11/assets/helpers.js?v=27854430373278452491688024718"></script>
-    <script defer src="/cdn/shop/t/11/assets/splide.min.js?v=15323724465567850331688024725"></script>
+    <script is="delay-script" url="/cdn/shop/t/11/assets/splide.min.js?v=15323724465567850331688024725"></script>
     <script defer src="/cdn/shop/t/11/assets/mediabox.min.js?v=150177701041689025671688024719"></script>
 
     <style>
@@ -45,7 +45,7 @@
     <link rel="stylesheet" href="/cdn/shop/t/11/assets/fonts.css?v=58483565803451788371695806730">
 
     <link rel="stylesheet" href="/cdn/shop/t/11/assets/new-heading.css?v=9457285026445821181687357026">
-    <link rel="stylesheet" href="/cdn/shop/t/11/assets/tailwind.css?v=148318756378458697681694159162">
+    <link is="delay-stylesheet" href="/cdn/shop/t/11/assets/tailwind.css?v=148318756378458697681694159162">
 
     <script defer>
         const Shop = {
@@ -213,7 +213,6 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="preconnect" href="https://cdn.shopify.com" crossorigin="">
-
 
     <title>
         World’s #1 Online Sleep Brand | Ellamart® Canada
@@ -590,7 +589,6 @@
 <body>
 
 
-
 <div class="sticky top-0 z-[101]">
     <!-- BEGIN sections: header-group -->
     <div id="shopify-section-sections--15913832546442__announcement-bar"
@@ -645,7 +643,8 @@
          class="shopify-section shopify-section-group-header-group site-header-wrapper">
         <link rel="stylesheet" href="/cdn/shop/t/11/assets/header.css?v=47871740537913818411690273878">
         <link rel="stylesheet" href="/cdn/shop/t/11/assets/cart-icon-bubble.css?v=49827955139299862791696073989">
-        <script is="delay-script" url="/cdn/shop/t/11/assets/main-navigation.js?v=31874650481387444961694160502"></script>
+        <script is="delay-script"
+                url="/cdn/shop/t/11/assets/main-navigation.js?v=31874650481387444961694160502"></script>
 
         <navigation-bar id="header">
 
