--- a/packages/delay-sample/index.html
+++ b/packages/delay-sample/index.html
@@ -13,7 +13,6 @@
     <script defer src="/cdn/shop/t/11/assets/jquery.beefup.min.js?v=82952605651928686161688024714"></script>
 
     <script defer src="/cdn/shop/t/11/assets/global.js?v=31874650481387444961694160502"></script>
-    <script defer src="/cdn/shop/t/11/assets/lazysizes.min.js?v=155223123402716617051647849393"></script>
     <script defer src="/cdn/shop/t/11/assets/layout-scripts.js?v=81574266922274938051691121534"></script>
     <script defer src="/cdn/shop/t/11/assets/helpers.js?v=27854430373278452491688024718"></script>
     <script is="delay-script" url="/cdn/shop/t/11/assets/splide.min.js?v=15323724465567850331688024725"></script>
@@ -460,14 +459,6 @@
     <link rel="alternate" hreflang="en" href="https:/">
 
     <link rel="alternate" hreflang="fr" href="https://qc.emma-sleep.ca/">
-
-
-    <!-- Start Weglot Script -->
-    <script is="delay-script" url="https://cdn.weglot.com/weglot.min.js" phase="interactive"></script>
-    <script id="has-script-tags" is="delay-script" phase="interactive">
-        Weglot.initialize({api_key: 'wg_e352fa8c030a877a802a404aac1074d00'});
-    </script>
-    <!-- End Weglot Script -->
 
     <!-- BEGIN app block: shopify://apps/klaviyo-email-marketing-sms/blocks/klaviyo-onsite-embed/2632fe16-c075-4321-a88b-50b567f42507 -->
 
@@ -4731,7 +4722,8 @@
 <script is="delay-script" url="/cdn/shop/t/11/assets/jquery.fancybox.min.js?v=102984942719613846721688024715"></script>
 <script is="delay-script" url="/cdn/shop/t/11/assets/select2.min.js?v=49960443923896795481688024721"></script>
 <script is="delay-script" url="/cdn/shop/t/11/assets/toastr.min.js?v=32063384496253430001688024728"></script>
-<script is="delay-script" url="/cdn/shop/t/11/assets/swiper-bundle.min.js?v=30986975797822707101688024726"></script>
+<script is="delay-script" phase="interactive"
+        url="/cdn/shop/t/11/assets/swiper-bundle.min.js?v=30986975797822707101688024726"></script>
 <script is="delay-script" url="/cdn/shop/t/11/assets/popper.min.js?v=106254159189482773611688024720"></script>
 
 <script is="delay-script" url="/cdn/shop/t/11/assets/tippy-bundle.umd.min.js?v=106717848408361717631688024727"></script>
@@ -5713,8 +5705,7 @@
     </div>
 
 </div>
-<link href="/cdn/shop/t/11/assets/store-localization.css?v=63831442359007797311687251079" is="delay-stylesheet"
-      type="text/css" media="all">
+<link href="/cdn/shop/t/11/assets/store-localization.css?v=63831442359007797311687251079" is="delay-stylesheet">
 
 <div id="store-localization-popup">
     <div class="store-localization__wrapper">
