--- a/packages/delay-sample/index.html
+++ b/packages/delay-sample/index.html
@@ -16,7 +16,7 @@
     <script defer src="/cdn/shop/t/11/assets/layout-scripts.js?v=81574266922274938051691121534"></script>
     <script defer src="/cdn/shop/t/11/assets/helpers.js?v=27854430373278452491688024718"></script>
     <script is="delay-script" url="/cdn/shop/t/11/assets/splide.min.js?v=15323724465567850331688024725"></script>
-    <script defer src="/cdn/shop/t/11/assets/mediabox.min.js?v=150177701041689025671688024719"></script>
+    <script is="delay-script" url="/cdn/shop/t/11/assets/mediabox.min.js?v=150177701041689025671688024719"></script>
 
     <style>
         .splide:not(.is-initialized) {
@@ -460,7 +460,6 @@
 
     <link rel="alternate" hreflang="fr" href="https://qc.emma-sleep.ca/">
 
-    <!-- BEGIN app block: shopify://apps/klaviyo-email-marketing-sms/blocks/klaviyo-onsite-embed/2632fe16-c075-4321-a88b-50b567f42507 -->
 
     <script defer>!function () {
         if (!window.klaviyo) {
@@ -1453,8 +1452,6 @@
             </div>
 
         </navigation-bar>
-
-
     </div>
     <!-- END sections: header-group -->
 </div>
@@ -1960,7 +1957,8 @@
             </div>
         </section>
 
-        <script defer src="/cdn/shop/t/11/assets/product-catalog.js?v=83088898987518290501688024721"></script>
+        <script is="delay-script"
+                url="/cdn/shop/t/11/assets/product-catalog.js?v=83088898987518290501688024721"></script>
     </div>
 
     <div id="shopify-section-template--15787492933770__winning-awards" class="shopify-section">
@@ -3440,7 +3438,8 @@
             </div>
         </section>
 
-        <script defer src="/cdn/shop/t/11/assets/featured-products.js?v=108917295628996507591688024715"></script>
+        <script is="delay-script"
+                url="/cdn/shop/t/11/assets/featured-products.js?v=108917295628996507591688024715"></script>
 
 
     </div>
@@ -4446,7 +4445,7 @@
             </div>
         </section>
 
-        <script defer src="/cdn/shop/t/11/assets/featured-faqs.js?v=67386142376282230451688024715"></script>
+        <script is="delay-script" url="/cdn/shop/t/11/assets/featured-faqs.js?v=67386142376282230451688024715"></script>
 
 
     </div>
@@ -4720,13 +4719,17 @@
         url="/cdn/shop/t/11/assets/jquery.ba-throttle-debounce.js?v=103250179697527314711688024714"></script>
 <script is="delay-script" url="/cdn/shop/t/11/assets/jquery.modal.min.js?v=15875380166552750701688024716"></script>
 <script is="delay-script" url="/cdn/shop/t/11/assets/jquery.fancybox.min.js?v=102984942719613846721688024715"></script>
-<script is="delay-script" url="/cdn/shop/t/11/assets/select2.min.js?v=49960443923896795481688024721"></script>
-<script is="delay-script" url="/cdn/shop/t/11/assets/toastr.min.js?v=32063384496253430001688024728"></script>
+<script is="delay-script" phase="interactive"
+        url="/cdn/shop/t/11/assets/select2.min.js?v=49960443923896795481688024721"></script>
+<script is="delay-script" phase="interactive"
+        url="/cdn/shop/t/11/assets/toastr.min.js?v=32063384496253430001688024728"></script>
 <script is="delay-script" phase="interactive"
         url="/cdn/shop/t/11/assets/swiper-bundle.min.js?v=30986975797822707101688024726"></script>
-<script is="delay-script" url="/cdn/shop/t/11/assets/popper.min.js?v=106254159189482773611688024720"></script>
+<script is="delay-script" phase="interactive"
+        url="/cdn/shop/t/11/assets/popper.min.js?v=106254159189482773611688024720"></script>
 
-<script is="delay-script" url="/cdn/shop/t/11/assets/tippy-bundle.umd.min.js?v=106717848408361717631688024727"></script>
+<script is="delay-script" phase="interactive"
+        url="/cdn/shop/t/11/assets/tippy-bundle.umd.min.js?v=106717848408361717631688024727"></script>
 
 <link is="delay-stylesheet" href="/cdn/shop/t/11/assets/jquery.modal.min.css?v=64857397979575196151688024716">
 <link is="delay-stylesheet" href="/cdn/shop/t/11/assets/jquery.fancybox.css?v=159808164371632363711688024715">
